--- a/ProblematicProblem/ProblematicProblem.csproj
+++ b/ProblematicProblem/ProblematicProblem.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.3.2" />
+  </ItemGroup>
+
 </Project>
